Added logo to header

--- a/src/assets/stylesheets/app.styl
+++ b/src/assets/stylesheets/app.styl
@@ -6,6 +6,11 @@
 body
   background $back
 
+.layout-header .header-logo
+  width auto
+  height 2em
+  margin-left 1em
+
 .layout-aside
   height 100vh
 
