Logically and dynamically filling data on Data-page

--- a/src/assets/stylesheets/components/tables.styl
+++ b/src/assets/stylesheets/components/tables.styl
@@ -6,3 +6,10 @@
 
     & + .q-btn
       margin-left 1em
+
+  img.rounded
+    width 35px
+    height 35px
+    object-fit cover
+    object-position 50% 0
+    border-radius 50%
