Changed login page

--- a/src/assets/stylesheets/pages/welcome.styl
+++ b/src/assets/stylesheets/pages/welcome.styl
@@ -1,4 +1,7 @@
 
+body
+  padding-right 0 !important
+
 .big
   margin 1rem 0
   font-size 2em
@@ -7,3 +10,13 @@
   font-size 1.5em
   margin-top -0.25rem
   margin-right 0.5rem
+
+#welcome-page
+  text-align left
+
+  .q-btn.signin
+    margin-right 5em
+
+#welcome-sigin .modal-content
+  max-width 100%
+  width 700px
