--- a/src/assets/stylesheets/pages/welcome.styl
+++ b/src/assets/stylesheets/pages/welcome.styl
@@ -14,6 +14,10 @@ body
 #welcome-page
   text-align left
 
+  > img
+    max-width 520px
+    max-height 300px
+
   .q-btn.signin
     margin-right 5em
 
