Fixed logo size on Dashboard

--- a/src/assets/stylesheets/pages/welcome.styl
+++ b/src/assets/stylesheets/pages/welcome.styl
@@ -13,10 +13,12 @@ body
 
 #welcome-page
   text-align left
+  padding 0 2em
 
   > img
     max-width 520px
     max-height 300px
+    width 100%
 
   .q-btn.signin
     margin-right 5em
