--- a/src/assets/stylesheets/base/_colors.styl
+++ b/src/assets/stylesheets/base/_colors.styl
@@ -1,6 +1,9 @@
 
-$back = #ffffff
+$back = #fafafa
 
 $social-facebook-back = #3f5d9b
 $social-google-back = #db4437
 $social-vk-back = #5281b7
+
+
+$pink = #ff005a
