--- a/src/assets/stylesheets/components/modal.styl
+++ b/src/assets/stylesheets/components/modal.styl
@@ -1,10 +1,27 @@
 
 .modal-content
-  padding 2em 4em
+  padding 80px 50px
 
   h1, h2, h3, h4, h5, h6
     margin 0
 
+  h5
+    color #051837
+    font-family Roboto
+    font-size 30px
+    font-weight 500
+
+  .q-card-actions
+  .q-card-container
+    padding: 0
+
   .q-btn
     & + .q-btn
       margin-left 1em
+
+  .bg-secondary
+    width 128px
+    height 41px
+    box-shadow 2px 3px 9px rgba(56, 183, 203, 0.55)
+    border-radius 4px
+    background-color #38b7cb !important
