--- a/src/assets/stylesheets/components/tables.styl
+++ b/src/assets/stylesheets/components/tables.styl
@@ -1,5 +1,7 @@
 
 .q-data-table
+  margin-bottom 45px
+  box-shadow 0 1px 8px rgba(124, 124, 124, 0.21)
   border none
   table:not(.responsive) th
     border none !important
