--- a/src/assets/stylesheets/components/q-card.styl
+++ b/src/assets/stylesheets/components/q-card.styl
@@ -9,21 +9,24 @@
   box-shadow 3px 5px 8px rgba(137, 137, 137, 0.15)
 
   .q-card-title
-    color #d1d1d1
+    color #292929
     font-family Roboto
-    font-size 13px
-    font-weight 300
+    font-size 16px
+    font-weight 400
     line-height 24px
     .q-icon
       color #ff005a
 
   .q-card-main
+    padding 0.5em 2em
     color #292929
     font-family Roboto
     font-size 24px
     font-weight 500
     line-height 24px
     text-transform uppercase
+
+
 
   .q-btn
     color #23cdfc
