--- a/src/assets/stylesheets/pages/welcome.styl
+++ b/src/assets/stylesheets/pages/welcome.styl
@@ -3,8 +3,8 @@ body
   padding-right 0 !important
 
 .big
-  margin 1rem 0
-  font-size 2em
+  margin 1.5rem 0 0.5rem
+  font-size 1.8em
 
 .head-icon
   font-size 1.5em
