Improved lang-switcher

--- a/src/assets/stylesheets/app.styl
+++ b/src/assets/stylesheets/app.styl
@@ -67,5 +67,11 @@ main, .layout
 span.cost
   margin-left 1em
 
+.color-light
+  .q-if-control
+    color #fff
+  .q-input-target
+    color #fff
+
 #header-menu
   margin-top 1em
