--- a/src/assets/stylesheets/pages/welcome.styl
+++ b/src/assets/stylesheets/pages/welcome.styl
@@ -18,6 +18,6 @@ body
   .q-btn.signin
     margin-right 5em
 
-#welcome-sigin .modal-content
+.welcome-sign-form .modal-content
   max-width 100%
   width 700px
